--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+  cursor: pointer;
 }
 
 /* Removing outside border of cells on the board*/
@@ -54,6 +55,11 @@ body {
   border-bottom: none;
 }
 
+.cell.x,
+.cell.circle {
+  cursor: not-allowed;
+}
+
 .cell.x::before,
 .cell.x::after {
   content: "";
@@ -69,4 +75,23 @@ body {
 
 .cell.x::after {
   transform: rotate(-45deg);
+}
+
+.cell.circle::before,
+.cell.circle::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.cell.circle::before {
+  width: var(--mark-size);
+  height: var(--mark-size);
+  background-color: black;
+}
+
+.cell.circle::after {
+  width: calc(var(--mark-size) * 0.7);
+  height: calc(var(--mark-size) * 0.7);
+  background-color: white;
 }
