--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,37 @@ body {
   height: calc(var(--mark-size) * 0.6);
   background-color: white;
 }
+
+.winning-message {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 5rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  flex-direction: column;
+}
+
+.winning-message button {
+  padding: 20px 100px;
+  font-size: 3rem;
+  background-color: white;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.winning-message button:hover {
+  background-color: black;
+  color: white;
+  border-color: white;
+}
+
+.winning-message.show {
+  display: flex;
+}
